# NormalVectorTransformFunctions

./: .gitignore  .gitignore~
billinear_interpolation/: CMakeCache.txt  CMakeLists.txt  Makefile  billinear_interpolation  cloud_viewer.cpp~  cmake_install.cmake
brodatz/: analyze_result.py  complete_comparison_results.txt~  complete_comparison_results_1.txt  complete_comparison_results_rotated.txt  crop.py  crop.py~  files.txt  files.txt~  gabor_results.txt  large_dataset.txt  new.txt  new_5_move.txt  new_free_best.txt  new_old_images.txt  states.txt  states.txt~  states_orig.txt  states_rotated.txt  states_rotated.txt~  states_vertical.txt  states_vertical.txt~
compare_hist/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  compare_hist
compare_image_to_texture/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  compare_image.cpp  compare_image_to_texture
complete_transform_loop/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  complete_transform_loop  transform_image.cpp
create_pcl/: CMakeLists.txt  create_pcl.cpp
crop_and_compare/: CMakeCache.txt  Makefile  cmake_install.cmake  crop_and_compare  crop_and_compare.cpp  crop_and_compare.cpp~
daft_image_test/: CMakeLists.txt~  gaborMatcher.cpp  main.cpp  transform.cpp  transform.hpp
filter/: filter.cpp
gabor/: first_test.py  process_threaded.py
gabor_for_report/: gaborTransform.cpp  gabor_jet.cpp  main.cpp  precision_recallpy
gabor_jet/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  gaborJet.cpp  gabor_jet  (+5 more)
image_warper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code.cpp  code.cpp~  image_warper
normal_viewer_single/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  normal_viewer.cpp  normal_viewer.cpp~  normal_viewer_single
transform_and_project/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cloud_viewer.cpp  cloud_viewer.cpp~  cmake_install.cmake  transform_and_project  transform_and_view
transform_perspective_transform/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  transform_perspective_transform  transform_perspective_transform.cpp
(+125 files in other folders)
